--- a/Service1Server/Service1Server.csproj
+++ b/Service1Server/Service1Server.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Consul" Version="0.7.2.6" />
     <PackageReference Include="Google.Protobuf" Version="3.11.2" />
     <PackageReference Include="Grpc" Version="2.26.0" />
     <PackageReference Include="Grpc.Tools" Version="2.26.0">
