--- a/LoginDemo/LoginDemo.csproj
+++ b/LoginDemo/LoginDemo.csproj
@@ -6,13 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="..\Protos\LoginService.proto">
-      <Link>LoginService.proto</Link>
-    </Protobuf>
-    <Protobuf Include="..\Protos\Service1.proto" Link="Service1.proto" GrpcServices="Client" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Consul" Version="0.7.2.6" />
     <PackageReference Include="Google.Protobuf" Version="3.11.2" />
     <PackageReference Include="Grpc" Version="2.26.0" />
@@ -20,7 +13,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="JWT" Version="5.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="..\Protos\LoginService.proto">
+      <Link>LoginService.proto</Link>
+    </Protobuf>
   </ItemGroup>
 
 </Project>
